--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -209,6 +209,7 @@
 			Ara bé, per l'exercici \myref{ex:sèries geomètriques} tenim que la sèrie \(\sum_{n=0}^{\infty}\frac{1}{3^{n}}\) és convergent, ja que \(-1<\frac{1}{3}<1\), i pel \myref{thm:criteri de comparació de sèries de termes positius} trobem que la sèrie \(\sum_{n=0}^{\infty}a_{n}\) és convergent.
 		\end{solution}
 	\end{example}
+	\subsection{Criteris de convergència}
 	\begin{proposition}[Criteri de l'arrel]
 		\labelname{criteri de l'arrel}\label{prop:criteri de l'arrel}
 		Siguin \(\sum_{n=0}^{\infty}a_{n}\) una sèrie de termes positius i
@@ -658,6 +659,10 @@
 		\begin{proof}
 			%Aquest enunciat té sentit pel Teorema \myref{thm:si la sèrie de d'una successió de funcions integrables Riemann convergeix uniformement, el seu límit és una funció integrable Riemann}.
 		\end{proof}
+	\end{theorem}
+	\begin{theorem}
+		\label{thm:FER}
+				
 	\end{theorem}
 
 %	\subsection{Sèries de potències}
