--- a/Apunts.tex
+++ b/Apunts.tex
@@ -1,5 +1,5 @@
 \RequirePackage[l2tabu, orthodox]{nag}
-\documentclass[10pt, a4paper, openany]{memoir}
+\documentclass[10pt, a4paper, openright]{memoir}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[catalan]{babel}
@@ -186,7 +186,10 @@
 %\makeatother
 
 \let\originalpart=\part
-\def\part{\cleardoublepage\originalpart}
+\def\part{\cleartoevenpage[\thispagestyle{empty}]\originalpart}
+
+\let\originalbibliography=\printbibliography
+\def\printbibliography{\openany\originalbibliography\openright}
 
 \let\originalleft\left
 \let\originalright\right
