--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -666,7 +666,7 @@
 			
 			Veiem ara que la condició és necessària (\(\implicatper\)). Suposem doncs que les aplicacions \(\pi_{X}\circ f\) i \(\pi_{Y}\circ f\) són contínues.
 			
-			\emph{hmm} %TODO
+			\emph{ànims, Claudi del futur} %TODO
 		\end{proof}
 	\end{theorem}
 	\begin{proposition}
@@ -692,6 +692,10 @@
 		\end{proof}
 	\end{proposition}
 	\subsection{La topologia quocient}
+	\begin{definition}[Why]
+		tho
+	\end{definition}
+	\chapter{Plis}
 	
 %	\begin{definition}[Aplicació contínua i homeomorfisme]
 %		\labelname{aplicació contínua}\label{def:aplicació contínua}
@@ -753,4 +757,4 @@
 %	\printbibliography
 \end{document}
 
-% https://arxiv.org/pdf/0708.2136.pdf (L) Sorprenentment elegant
+% https://arxiv.org/pdf/0708.2136.pdf (L) Sorprenentment elegant (Espais d'Alexandroff)
