Arreglats warnings (el de AL)

--- a/parts/AlgebraLineal.tex
+++ b/parts/AlgebraLineal.tex
@@ -721,18 +721,18 @@
 			\end{array}\right],
 			\end{multline*}
 			i per la proposició \myref{prop:producte de matrius en blocs} tenim que
-			\[\left[\begin{array}{ccc|ccc}
+			\[\left[\begin{array}{cccccc}
 			p_{1,1} & \cdots & p_{1,r} & 0 & \cdots & 0 \\
 			\vdots & & \vdots & \vdots & & \vdots \\
-			p_{s,1} & \cdots & p_{s,r} & 0 & \cdots & 0 \\\hline
+			p_{s,1} & \cdots & p_{s,r} & 0 & \cdots & 0 \\
 			p_{s+1,1} & \cdots & p_{s+1,r} & 0 & \cdots & 0 \\
 			\vdots & & \vdots & \vdots & & \vdots \\
 			p_{m,1} & \cdots & p_{m,r} & 0 & \cdots & 0
 			\end{array}\right]=
-			\left[\begin{array}{ccc|ccc}
+			\left[\begin{array}{cccccc}
 			q_{1,1} & \cdots & q_{1,r} & q_{1,r+1} & \cdots & q_{1,n} \\
 			\vdots & & \vdots & \vdots & & \vdots \\
-			q_{s,1} & \cdots & q_{s,r} & q_{s,r+1} & \cdots & q_{s,n} \\\hline
+			q_{s,1} & \cdots & q_{s,r} & q_{s,r+1} & \cdots & q_{s,n} \\
 			0 & \cdots & 0 & 0 & \cdots & 0 \\
 			\vdots & & \vdots & \vdots & & \vdots \\
 			0 & \cdots & 0 & 0 & \cdots & 0
