--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -8,7 +8,7 @@
 	
 	Els \emph{objectes matemàtics} són abstraccions de conceptes. Anomenem a les possibles propietats d'aquests objectes \emph{relacions}. Aquestes poden ser o bé vertaderes o bé falses.
 	
-	Anomenem a algunes d'aquestes relacions \emph{axiomes}, que són relacions que prenem com a vertaderes des d'un principi. Per determinar la veracitat d'altres relacions empararem les \emph{demostracions}. Direm que una relació és vertadera quan es pot deduir a partir dels axiomes amb una demostració, que és una successió d'arguments rigorosos per convèncer-nos de que una relació és vertadera.
+	Anomenem a algunes d'aquestes relacions \emph{axiomes}, que són relacions que prenem com a vertaderes des d'un principi. Per determinar la veracitat d'altres relacions empararem les \emph{demostracions}. Direm que una relació és vertadera quan es pot deduir a partir dels axiomes amb una demostració, que és una successió d'arguments rigorosos per convèncer-nos que una relació és vertadera.
 	\subsection{Operacions lògiques elementals}
 	\begin{definition}[Disjunció]
 		\labelname{disjunció}\label{def:disjunció}
