--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -104,13 +104,13 @@
 		\label{thm:l'espai de funcions contínues i acotades és complet}
 		Siguin \(X\) amb la topologia \(\tau\) un espai topològic i \(T\) un compacte de \(\mathbb{R}^{n}\). Aleshores \(\mathcal{C}_{b}(X,T)\) és espai mètric complet.
 		\begin{proof}
-			Sigui \(\{f_{n}\}_{n\in\mathbb{N}}\) una successió de Cauchy de \(\mathcal{C}_{b}(X,T)\). Per la definició de \myref{def:successió de Cauchy amb normes} tenim que per a tots naturals \(n\) i \(m\) existeix un real \(\varepsilon>0\) tal que
+			Sigui \((f_{n})_{n\in\mathbb{N}}\) una successió de Cauchy de \(\mathcal{C}_{b}(X,T)\). Per la definició de \myref{def:successió de Cauchy amb normes} tenim que per a tots naturals \(n\) i \(m\) existeix un real \(\varepsilon>0\) tal que
 			\[\norm{f_{n}-f_{m}}<\varepsilon.\]
 			Per la definició de \myref{def:distància entre funcions acotades} trobem que
 			\[\sup_{x\in X}\norm{f_{n}(x)-f_{m}(x)}<\varepsilon\]
 			i trobem que per a tot \(x\) de \(X\) es satisfà
 			\[\norm{f_{n}(x)-f_{m}(x)}<\varepsilon\]
-			i per la definició de \myref{def:successió de Cauchy amb normes} trobem que la successió \(\{f_{n}(x)\}_{n\in\mathbb{N}}\) és de Cauchy, i per la definició de \myref{def:límit} trobem que la successió \(\{f_{n}(x)\}_{n\in\mathbb{N}}\) és convergent. Denotem, per a tot \(x\) de \(X\),
+			i per la definició de \myref{def:successió de Cauchy amb normes} trobem que la successió \((f_{n}(x))_{n\in\mathbb{N}}\) és de Cauchy, i per la definició de \myref{def:límit} trobem que la successió \((f_{n}(x))_{n\in\mathbb{N}}\) és convergent. Denotem, per a tot \(x\) de \(X\),
 			\begin{equation}
 				\label{thm:l'espai de funcions contínues i acotades és complet:eq1}
 				\lim_{n\to\infty}f_{n}(x)=f(x).
@@ -122,7 +122,7 @@
 			\[\lim_{m\to\infty}\norm{f_{n}(x)-f_{m}(x)}=\norm{f_{n}(x)-f(x)}.\]
 			Per tant tenim que per a tot \(x\) de \(X\) es satisfà
 			\[\norm{f_{n}(x)-f(x)}\leq\frac{\varepsilon}{2}<\varepsilon\]
-			i per la definició de \myref{def:convergència uniforme} tenim que \(\{f_{n}\}_{n\in\mathbb{N}}\) convergeix uniformement a \(f(x)\), i per la definició de \myref{def:espai mètric complet} tenim que \(\mathcal{C}_{b}(X,T)\) és complet.
+			i per la definició de \myref{def:convergència uniforme} tenim que \((f_{n})_{n\in\mathbb{N}}\) convergeix uniformement a \(f(x)\), i per la definició de \myref{def:espai mètric complet} tenim que \(\mathcal{C}_{b}(X,T)\) és complet.
 		\end{proof}
 	\end{theorem}
 	\subsection{Aplicacions contractives i punts fixes}
@@ -156,7 +156,7 @@
 			\[\distancia(a,b)\leq k\distancia(a,b).\]
 			Ara bé, com que \(0<k<1\), ha de ser \(\distancia(a,b)=0\), i per tant trobem que \(a=b\).
 			
-			Veiem ara que existeix un punt fix. Prenem un element \(x\) de \(X\) i considerem la successió \(\{T^{n}(x)\}_{n\in\mathbb{N}}\). Sigui \(r\) un natural. Aleshores tenim que per a tot \(n\) natural
+			Veiem ara que existeix un punt fix. Prenem un element \(x\) de \(X\) i considerem la successió \((T^{n}(x))_{n\in\mathbb{N}}\). Sigui \(r\) un natural. Aleshores tenim que per a tot \(n\) natural
 			\begin{align*}
 				\distancia(T^{n+r}(x),T^{n}(x))&\leq k\distancia(T^{n+r-1}(x),T^{n-1}(x))\tag{\myref{thm:les aplicacions contractives tenen un únic punt fix:eq1}}\\
 				&\leq k^{2}\distancia(T^{n+r-2}(x),T^{n-2}(x))\tag{\myref{thm:les aplicacions contractives tenen un únic punt fix:eq1}}\\
@@ -171,7 +171,7 @@
 			\end{align*}
 			Ara bé, com que \(0<k<1\) tenim que existeix un real \(\varepsilon>0\) tal que
 			\[\distancia(T^{n+r}(x),T^{n}(x))<\varepsilon,\]
-			i per la definició de \myref{def:successió de Cauchy amb normes} tenim que la successió \(\{T^{n}(x)\}_{n\in\mathbb{N}}\) és una successió de Cauchy, i com que, per hipòtesi, \(X\) és complet, tenim que existeix un element \(p\) de \(X\) tal que
+			i per la definició de \myref{def:successió de Cauchy amb normes} tenim que la successió \((T^{n}(x))\) és una successió de Cauchy, i com que, per hipòtesi, \(X\) és complet, tenim que existeix un element \(p\) de \(X\) tal que
 			\begin{equation}
 				\label{thm:les aplicacions contractives tenen un únic punt fix:eq2}
 				p=\lim_{n\to\infty}T^{n}(x).
@@ -325,7 +325,7 @@
 	\end{definition}
 	\begin{lemma}[Teorema de Arzelà-Ascoli]
 		\labelname{Teorema de Arzelà-Ascoli}\label{thm:Teorema de Arzelà-Ascoli}\label{lema:Teorema de Peano}
-		Siguin \(X\) un compacte i \(\{f_{n}\}_{n\in\mathbb{N}}\) una successió de funcions de \(\mathcal{C}_{b}(X,T)\) equicontínua i puntualment acotada. Aleshores la successió \(\{f_{n}\}_{n\in\mathbb{N}}\) té una parcial acotada.
+		Siguin \(X\) un compacte i \((f_{n})_{n\in\mathbb{N}}\) una successió de funcions de \(\mathcal{C}_{b}(X,T)\) equicontínua i puntualment acotada. Aleshores la successió \((f_{n})_{n\in\mathbb{N}}\) té una parcial acotada.
 		\begin{proof}
 			Prenem un real \(\varepsilon>0\). Per la definició de \myref{def:família de funcions equicontínua} tenim que per a tot punt \(x\) de \(X\) existeix un entorn \(N_{x}\) de \(x\) tal que per a tot \(y\) de \(N_{x}\) tenim, per a tot \(n\) natural, que
 			\[\norm{f_{n}(y)-f_{n}(x)}<\frac{\varepsilon}{3}.\]
@@ -340,11 +340,11 @@
 				X=\bigcup_{i=1}^{k}\obert{V}_{x_{i}}.
 			\end{equation}
 			
-			Com que, per hipòtesi, la \(\{f_{n}\}_{n\in\mathbb{N}}\) és una successió de funcions puntualment acotada, per la definició de \myref{def:família de funcions puntualment acotada} tenim que existeix un real \(M\) tal que per a tot \(n\) natural tenim
+			Com que, per hipòtesi, la \((f_{n})_{n\in\mathbb{N}}\) és una successió de funcions puntualment acotada, per la definició de \myref{def:família de funcions puntualment acotada} tenim que existeix un real \(M\) tal que per a tot \(n\) natural tenim
 			\[\norm{f_{n}(x_{i})}<M,\]
-			i tenim pel \myref{thm:Teorema de Bolzano-Weierstrass} que existeix una parcial \(\{f_{n}^{1}(x_{1})\}_{n\in\mathbb{N}}\) de \(\{f_{n}(x_{i})\}_{n\in\mathbb{N}}\) convergent. Podem repetir l'argument per trobar una successió de la forma
-			\[\{f^{k}_{n}(x_{i})\}_{n\in\mathbb{N}}\quad\text{per a tot }i\text{ de }\{1,\dots,k\}.\]
-			Tenim que la successió \(\{f^{k}_{n}(x_{i})\}_{n\in\mathbb{N}}\) és convergent. Per tant, per la definició de \myref{def:límit} trobem que existeix un element de \(X\), \(f^{k}(x_{i})\) tal que existeix un natural \(n'_{\varepsilon}\) satisfent que per a tot \(n>n'_{\varepsilon}\) es compleix
+			i tenim pel \myref{thm:Teorema de Bolzano-Weierstrass} que existeix una parcial \((f_{n}^{1}(x_{1}))_{n\in\mathbb{N}}\) de \((f_{n}(x_{i}))_{n\in\mathbb{N}}\) convergent. Podem repetir l'argument per trobar una successió de la forma
+			\[(f^{k}_{n}(x_{i}))_{n\in\mathbb{N}}\quad\text{per a tot }i\text{ de }\{1,\dots,k\}.\]
+			Tenim que la successió \((f^{k}_{n}(x_{i}))_{n\in\mathbb{N}}\) és convergent. Per tant, per la definició de \myref{def:límit} trobem que existeix un element de \(X\), \(f^{k}(x_{i})\) tal que existeix un natural \(n'_{\varepsilon}\) satisfent que per a tot \(n>n'_{\varepsilon}\) es compleix
 			\begin{equation}
 				\label{thm:Teorema de Arzelà-Ascoli:eq3}
 				\norm{f^{k}_{n}(x_{i})-f^{k}(x_{i})}<\frac{\varepsilon}{6},
@@ -367,21 +367,21 @@
 				\leq&\frac{\varepsilon}{3}+\norm{f^{k}_{n}(x_{j})-f^{k}_{m}(x_{j})}+\frac{\varepsilon}{3}\tag{\ref{thm:Teorema de Arzelà-Ascoli:eq2}} \\
 				\leq&\frac{\varepsilon}{3}+\frac{\varepsilon}{3}+\frac{\varepsilon}{3}=\varepsilon\tag{\ref{thm:Teorema de Arzelà-Ascoli:eq4}}
 			\end{align*}
-			Tenim doncs que per a tot \(\varepsilon>0\) real existeix una parcial \(\{g^{(\varepsilon)}_{n'_{\varepsilon}+n}\}_{n\in\mathbb{N}}\) de \(\{f_{n}\}_{n\in\mathbb{N}}\) que satisfà
+			Tenim doncs que per a tot \(\varepsilon>0\) real existeix una parcial \((g^{(\varepsilon)}_{n'_{\varepsilon}+n})_{n\in\mathbb{N}}\) de \((f_{n})_{n\in\mathbb{N}}\) que satisfà
 			\[\norm{g^{(\varepsilon)}_{n'_{\varepsilon}+n}-g^{(\varepsilon)}_{n'_{\varepsilon}+m}}\leq\varepsilon\]
 			per a tot \(n\) i \(m\) enters.
 			
 			Definim, per simplificar la notació, la successió
-			\[\left\{g^{(\varepsilon)}_{n'_{\varepsilon}+n}\right\}_{n\in\mathbb{N}}=\left\{f^{(\varepsilon^{-1})}_{n'_{\varepsilon^{-1}}+n}\right\}_{n\in\mathbb{N}}.\]
+			\[\left(g^{(\varepsilon)}_{n'_{\varepsilon}+n}\right)_{n\in\mathbb{N}}=\left(f^{(\varepsilon^{-1})}_{n'_{\varepsilon^{-1}}+n}\right)_{n\in\mathbb{N}}.\]
 			
 			Per tant tenim que per a \(\varepsilon=1\) es satisfà
 			\[\norm{f^{(1)}_{n'_{1}+n}(x)-f^{(1)}_{n'_{1}+m}(x)}\leq1.\]
-			Si prenem \(\varepsilon=\frac{1}{2}\) trobem una parcial \(\{f^{2}_{n_{2}+n}\}_{n\in\mathbb{N}}\) de \(\{f^{1}_{n_{1}+n}\}_{n\in\mathbb{N}}\) que satisfà
+			Si prenem \(\varepsilon=\frac{1}{2}\) trobem una parcial \((f^{2}_{n_{2}+n})_{n\in\mathbb{N}}\) de \((f^{1}_{n_{1}+n})_{n\in\mathbb{N}}\) que satisfà
 			\[\norm{f^{(2)}_{n_{2}+n}(x)-f^{(2)}_{n_{2}+m}(x)}\leq\frac{1}{2}.\]
 			
-			Tenim doncs que per a tot \(i\) natural la successió \(\{f^{i+1}_{n_{i+1}+n}\}_{n\in\mathbb{N}}\) és una parcial de la successió \(\{f^{i+1}_{n_{i+1}+n}\}_{n\in\mathbb{N}}\) i per a tot \(n\) i \(m\) naturals tenim
+			Tenim doncs que per a tot \(i\) natural la successió \((f^{i+1}_{n_{i+1}+n})_{n\in\mathbb{N}}\) és una parcial de la successió \((f^{i+1}_{n_{i+1}+n})_{n\in\mathbb{N}}\) i per a tot \(n\) i \(m\) naturals tenim
 			\[\norm{f^{i+1}_{n_{i+1}+n}(x)-f^{i+1}_{n_{i+1}+m}(x)}<\frac{1}{i},\]
-			i per tant, per la definició de \myref{def:successió de Cauchy amb normes} trobem que la successió \(\{f^{i+1}_{n_{i+1}+n}\}_{n\in\mathbb{N}}\) és de Cauchy per a tot \(i\) natural, i com que pel Teorema \myref{thm:l'espai de funcions contínues i acotades és complet} tenim que \(\mathcal{C}_{b}(X,T)\) és un espai complet, per la definició d'\myref{def:espai mètric complet} trobem que la parcial \(\{f^{i+1}_{n_{i+1}+n}\}_{n\in\mathbb{N}}\) de \(\{f_{n}\}_{n\in\mathbb{N}}\) és convergent, com volíem veure.
+			i per tant, per la definició de \myref{def:successió de Cauchy amb normes} trobem que la successió \((f^{i+1}_{n_{i+1}+n})_{n\in\mathbb{N}}\) és de Cauchy per a tot \(i\) natural, i com que pel Teorema \myref{thm:l'espai de funcions contínues i acotades és complet} tenim que \(\mathcal{C}_{b}(X,T)\) és un espai complet, per la definició d'\myref{def:espai mètric complet} trobem que la parcial \((f^{i+1}_{n_{i+1}+n})_{n\in\mathbb{N}}\) de \((f_{n})_{n\in\mathbb{N}}\) és convergent, com volíem veure.
 		\end{proof}
 	\end{lemma}
 	\begin{theorem}[Teorema Peano]
@@ -458,7 +458,7 @@
 		\label{prop:existeixen solucions improrrogables}
 		Sigui \(A(t_{0},x_{0})\) el conjunt de solucions d'un problema de Cauchy. Aleshores existeix un element \((I,u)\) de \(A(t_{0},x_{0})\) tal que \((I,u)\) és una solució improrrogable.
 		\begin{proof}
-			Siguin \((I_{i},u_{i})_{i\in J}\) una família de solucions del problema de Cauchy amb \((I_{i},u_{i})\leq(I_{j},u_{j})\) si \(i\leq j\). Aleshores, per la definició de \myref{def:cadena}, trobem que la família \((I_{i},u_{i})_{i\in J}\) és una cadena.
+			Sigui \(\{I_{i},u_{i}\}_{i\in J}\) una família de solucions del problema de Cauchy amb \((I_{i},u_{i})\leq(I_{j},u_{j})\) si \(i\leq j\). Aleshores, per la definició de \myref{def:cadena}, trobem que la família \(\{I_{i},u_{i}\}_{i\in J}\) és una cadena.
 			
 			Considerem \(I=\bigcup_{i\in J}I_{i}\) i definim la funció \(u\colon I\longrightarrow\mathbb{R}^{n}\) com \(u(t)=u_{n}(t)\) si \(t\) pertany a \(I_{n}\). Veiem que \(u\) està ben definida. Prenem \(t_{0}\) de \(I\). Suposem que \(t_{0}\) pertany a \(I_{n}\) i \(I_{m}\) fixats. Aleshores, com que per hipòtesi, \((I_{n},u_{n})\leq(I_{m},u_{m})\) ó \((I_{m},u_{m})\leq(I_{n},u_{n})\). Suposem que \((I_{n},u_{n})\leq(I_{m},u_{m})\). Aleshores per la definició de \myref{def:prolongació} tenim que per a tot \(t\) de \(I_{n}\) tenim que \(u_{n}(t)=u_{m}(t)\), i per tant \(u\) està ben definida. El cas \((I_{m},u_{m})\leq(I_{n},u_{n})\) és anàleg.
 			
