--- a/parts/FNM.tex
+++ b/parts/FNM.tex
@@ -1734,7 +1734,7 @@
 		\[\sigma=\tau_{1}\circ\dots\circ\tau_{r}=\tau'_{1}\circ\dots\circ\tau'_{r'}.\]
 		Aleshores \(r-r'\) és parell.
 		\begin{proof}
-			No m'agraden les demostracions que veig ni em surt una millor.%TODO%FER
+			:(%TODO%FER
 		\end{proof}
 	\end{theorem}
 	\begin{definition}[Signe d'una permutació]
@@ -1942,7 +1942,7 @@
 	\printbibliography
 	La secció sobre els axiomes de Peano està fortament inspirada en \cite{notesKumar}. La resta de la teoria és una combinació de \cite{AntoineRosaCampsMoncasiIntroduccioAlgebraAbstracta} i \cite{TemesFonaments}, uns apunts de l'assignatura que sospito que només són accessibles des del campus virtual.
 	
-	La bibliografia del curs inclou els textos \cite{AntoineRosaCampsMoncasiIntroduccioAlgebraAbstracta,CastelletLlerenaAlgebraLinealIGeometria,GodementAlgebra,NutsAndBoltsOfProofs,BujalanceBujalanceCostaProblemasMatematicaDiscreta,IntroductionToMathematicalReasoning,ChapterZeroSchumacher}.
+	La bibliografia del curs inclou els textos \cite{AntoineRosaCampsMoncasiIntroduccioAlgebraAbstracta, CastelletLlerenaAlgebraLinealIGeometria, GodementAlgebra, NutsAndBoltsOfProofs, BujalanceBujalanceCostaProblemasMatematicaDiscreta, IntroductionToMathematicalReasoning, ChapterZeroSchumacher}.
 \end{document}
 
 %AFEGIR paradoxa de Russell
